add personal info

--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -1,23 +1,37 @@
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
+%    SECTION TITLE
 %-------------------------------------------------------------------------------
 \cvsection{Education}
 
-
 %-------------------------------------------------------------------------------
-%	CONTENT
+%    CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {M.Sc. in Computer Science and Applied Mathematics} % Degree
+    {University of São Paulo} % Institution
+    {São Paulo, Brazil} % Location
+    {2021 -- 2023} % Date(s)
     {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+      \begin{cvitems}
+        \item {Graduated with a GPA of 4.0/4.0 from Brazil's top-ranked CS Master's program (Capes).}
+        \item {Reviewer for international Software Engineering conferences.}
+        \item {Published two peer-reviewed research papers and collaborated with international researchers.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {B.Sc. in Software Engineering} % Degree
+    {Pontifical Catholic University of Campinas} % Institution
+    {Campinas, Brazil} % Location
+    {2017 -- 2020} % Date(s)
+    {
+      \begin{cvitems}
+        \item {Graduated in the top 5\% of the class.}
+        \item {Led consulting projects for local software development companies.}
       \end{cvitems}
     }
 
