--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -1,16 +1,10 @@
-%-------------------------------------------------------------------------------
-%	SECTION TITLE
-%-------------------------------------------------------------------------------
 \cvsection{Summary}
 
-
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
 \begin{cvparagraph}
 
-%---------------------------------------------------------
-DevOps Engineer at fintech \& blockchain company Dunamu which is known for operating Upbit, the largest cryptocurrency exchange in Korea. Have led growth at infrastructure departments in two fintech companies as lead engineer and founding member. 12+ years of diverse software engineering experience with specialties in software architecture design, infrastructure operation, backend development, and security engineering.
+Experienced Software Engineer with over 6 years of experience designing and developing distributed, scalable web systems in both local and international settings. Currently working at Just Eat Takeaway in Amsterdam, where I focus on high-performance financial platforms and distributed computing challenges.
 
-Love to contribute to open sources and tech communities by sharing knowledge and experience. Prefers a command line interface environment as a big fan of Vim, Linux, and macOS. Always trying to customize to find the most optimal environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools.
+I’ve worked with a wide range of technologies across startups and large tech companies, adapting and learning quickly as needed. I’ve also contributed to scientific research with published and peer-reviewed papers in the field of Distributed Software Architectures.
+
+Passionate about software engineering, architecture, and building robust systems. I thrive in collaborative environments where I can share knowledge, lead technical discussions, and continuously improve software quality.
 \end{cvparagraph}
