--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -26,7 +26,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-skyblue}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{3E6D9C}
 
@@ -51,16 +51,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Byungjin}{Park}
-\position{Site Reliability Engineer{\enskip\cdotp\enskip}Software Architect}
-\address{235, World Cup buk-ro, Mapo-gu, Seoul, 03936, Republic of Korea}
+\name{Rodrigo}{de Campos Soares}
+\position{Senior Software Engineer}
+\address{Amsterdam, The Netherlands}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
+\email{soares.c.rodrigo@gmail.com}
 %\dateofbirth{January 1st, 1970}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\homepage{www.rodrigocsoares.com}
+\github{RodrigoCSoares}
+\linkedin{soarescrodrigo}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -70,12 +69,12 @@
 % \kaggle{kaggle-id}
 % \hackerrank{hackerrank-id}
 % \telegram{telegram-username}
-% \googlescholar{googlescholar-id}{name-to-display}
+\googlescholar{Btn6KQsAAAAJ}{Rodrigo C. Soares}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
 
-\quote{``Be the change that you want to see in the world."}
+% \quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -89,7 +88,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Byungjin Park~~~·~~~Résumé}
+  {Rodrigo C. Soares~~~·~~~Resume}
   {\thepage}
 
 
@@ -99,10 +98,11 @@
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
 \input{resume/experience.tex}
+\input{resume/publications.tex}
+\newpage
 \input{resume/honors.tex}
-\input{resume/certificates.tex}
+% \input{resume/certificates.tex}
 % \input{resume/presentation.tex}
-% \input{resume/writing.tex}
 % \input{resume/committees.tex}
 \input{resume/education.tex}
 % \input{resume/extracurricular.tex}
