--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -1,123 +1,86 @@
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
+%    SECTION TITLE
 %-------------------------------------------------------------------------------
 \cvsection{Work Experience}
 
-
 %-------------------------------------------------------------------------------
-%	CONTENT
+%    CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
 %---------------------------------------------------------
   \cventry
-    {DevOps Engineer} % Job title
-    {Dunamu Inc.} % Organization
-    {Seoul, S.Korea} % Location
-    {Sep. 2023 - Present} % Date(s)
-    {
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Founding Member \& Site Reliability Engineer \& Infrastructure Team Lead} % Job title
-    {Danggeun Pay Inc. (KarrotPay)} % Organization
-    {Seoul, S.Korea} % Location
-    {Mar. 2021 - Jun. 2023} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Everything that matters.}
-        \item {Designed and provisioned the entire infrastructure on the AWS cloud to meet security compliance and acquire a business license for financial services in Korea.}
-        \item {Continuously improved the infrastructure architecture since launching the service. (currently 3.6 million users)}
-        \item {Established a standardized base for declarative management of infrastructures and service deployments, enabling operational efficiency and consistency. Over 90\% of AWS resources were all managed through standardized terraform modules. All add-ons and service workloads on the Kubernetes cluster were managed on a GitOps basis with Kustomize and ArgoCD.}
-        \item {Saved over 30\% of the overall AWS costs by establishing a quarterly purchasing strategiy for RI (Reserved Instance) and SP (Savings Plan) and by introducing Graviton instances.}
-        \item {Established a core architecture for regulating of outbound DNS traffic in multi-account and multi-VPC environments utilizing AWS Route53 DNS Firewall and FMS. This significantly increased the level of security confidence in the financial sector's segregated environment.}
-        \item {Introduced Okta employee identity solution in the company, establishing security policies and configuring SSO integration with over 20 enterprise systems including AWS, GitHub, Slack, Google Workspace. Set up a Hub and Spoke architecture, enabling a collaborative account structure with the parent company, Daangn Market.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Site Reliability Engineer} % Job title
-    {Danggeun Market Inc.} % Organization
-    {Seoul, S.Korea} % Location
-    {Feb. 2021 - Mar. 2021} % Date(s)
-    {
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Founding Member \& Director of Infrastructure Division} % Job title
-    {Kasa} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2018 - Jan. 2021} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed on-boarding process to guide new engineers, help them to focus on the right tasks, and set expectations to help them be successful at Infrastructure team.}
-        \item {Migrated the orchestration system from DC/OS to Kubernetes which is based on AWS EKS. Managed 3 Kubernetes clusters and 300+ pods. Managed all Kubernetes manifests declaratively with Kustomize and ArgoCD.}
-        \item {Designed and managed complex network configurations on AWS with 4 VPC and 100+ subnets. Separated the development network and operation network according to financial regulations. Established dedicated network connections from AWS VPC to partners' on-premise network based on AWS Direct Connect with secure connection using IPsec VPN. Provisioned OpenVPN servers with LDAP integration.}
-        \item {Provisioned a observability system with Kafka, Elastic Stack(Filebeat, Heartbeat, APM Server, Logstash, Elasticsearch, Kibana). Collected log, uptime, tracing data from hosts, containers, pods and more. The ES cluster which has 9 nodes processed more than 1 billion documents per month. Wrote Terraform module to easily provision ES cluster on AWS EC2 instances.}
-        \item {Provisioned a monitoring system with Kafka, Telegraf, InfluxDB, Grafana. Collected metrics from hosts, containers, pods and more. Wrote Terraform module to easily provision InfluxDB with HA on AWS EC2 instances.}
-        \item {Introduced Kong API Gateway to easily connect all API microservices with a declarative management method based on Terraform and Atlantis to collaborate and audit change history.}
-        \item {Provisioned the Directory Service for employee identity management based on OpenLDAP which guarantees HA with multi-master replication.}
-        \item {Implemented Worker microservices consuming Kafka event topics for email, SMS, Kakaotalk and Slack notification. Developed in-house framework to easily build Kafka consumer microservice with common features including retry on failure, DLQ(Dead Letter Queue), event routing and more.}
-        \item {Introduced Elastic APM to help distributed tracing, trouble-shooting and performance testing in MSA.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May. 2018} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - Jun. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
     {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
+    {Just Eat Takeaway} % Organization
+    {Amsterdam, Netherlands} % Location
+    {Aug. 2021 -- Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
-        \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
+        \item {Architected and developed financial systems including a Double Entry/General Ledger platform capable of handling millions of transactions daily.}
+        \item {Led development of distributed, highly scalable services using microservices architecture.}
+        \item {Provided technical leadership in architectural design, code quality, and infrastructure decisions.}
+        \item {Worked with technologies such as Java, Kotlin, Spring, C\#, .NET, AWS, Postgres, MySQL, Apache Kafka, Kubernetes, Grafana, Datadog, and Vault.}
+        \item {Actively contributed to internal knowledge sharing, mentoring, and codebase improvements.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Senior Backend Software Engineer} % Job title
+    {iFood} % Organization
+    {São Paulo, Brazil} % Location
+    {Aug. 2021 -- Aug. 2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Worked at one of the largest tech companies in LATAM, supporting millions of users.}
+        \item {Designed and built highly scalable distributed systems for financial and credit operations.}
+        \item {Developed a Double Entry/General Ledger system to process millions of transactions daily.}
+        \item {Contributed to product development, architectural design, and technical leadership.}
+        \item {Technologies included Java, Kotlin, Spring, NodeJS, NestJS, AWS, Postgres, Apache Kafka, Kubernetes, Grafana, NewRelic, Vault.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Backend Software Engineer (Mid-level/Senior)}
+    {Looqbox}
+    {Campinas, Brazil}
+    {Jul. 2020 -- Aug. 2021}
+    {
+      \begin{cvitems}
+        \item {Led key projects and conducted technical interviews to support team growth and hiring at a high-potential startup (100 Startups to Watch Brazil).}
+        \item {Designed and deployed NLP and web services used by tens of thousands of active users.}
+        \item {Implemented microservices architecture with REST APIs, CI/CD pipelines, and message brokers for scalable backend systems.}
+        \item {Utilized Java, Kotlin, Spring, Redis, RabbitMQ, MongoDB, Elasticsearch, GCP, Apache Beam, and Kubernetes.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Data Engineer}
+    {Dextra}
+    {Campinas, Brazil}
+    {Jan. 2020 -- Jun. 2020}
+    {
+      \begin{cvitems}
+        \item {Architected and implemented distributed data processing pipelines (batch and streaming) for a multinational financial client.}
+        \item {Achieved high throughput and low-latency performance using parallel processing and clustered computing.}
+        \item {Tech stack included Scala, Python, Apache Spark, Kafka, and Parquet.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Software Engineer}
+    {Samsung's Institute of Research and Development}
+    {Campinas, Brazil}
+    {Oct. 2018 -- Oct. 2019}
+    {
+      \begin{cvitems}
+        \item {Contributed to the development and localization of Bixby (Samsung’s voice assistant) for the Portuguese language, launched in 2020.}
+        \item {Collaborated with international teams to ensure integration and quality across different regions and platforms.}
+        \item {Also developed IoT features for Samsung’s Family Hub refrigerator line.}
+        \item {Worked primarily with Java, Android, and JavaScript.}
       \end{cvitems}
     }
 
